--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,15 +1,15 @@
 services:
   db:
     image: postgres:14
-    container_name: erp-db
+    container_name: erp-db                      # 컨테이너 이름 설정
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB}               # 초기 생성할 DB 이름 (env 파일에서 주입)
     ports:
-      - "5432:5432"
+      - "5432:5432"                             # 호스트:컨테이너 포트 매핑 (개발용 노출)
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data  # DB 데이터를 호스트 볼륨에 영속 저장
 
 volumes:
-  postgres-data:
+  postgres-data:                                # 위에서 지정한 볼륨 이름 선언
