--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,12 @@ version: "3.8"
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: erp-app
+      context: .                # 현재 디렉토리에서 Dockerfile을 빌드
+      dockerfile: Dockerfile    # 사용할 Dockerfile 지정
+    container_name: erp-app     # 컨테이너 이름 지정
     ports:
-      - "8080:8080"
+      - "8080:8080"             # 호스트:컨테이너 포트 매핑
     env_file:
-      - .env
+      - .env                    # 환경 변수 파일 로드
     depends_on:
-      - db
-
+      - db                      # db 서비스가 먼저 실행된 후 app 실행
