--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,17 @@
-.gradle
-build
-.git
+# 빌드 산출물
+build/
+.gradle/
+out/
+
+# IDE/Tool 설정
+*.iml
+.idea/
+.vscode/
+
+# Git 관련
+.git/
 .gitignore
-Dockerfile
-README.md
+
+# 테스트 리포트, 로그 등
+test-output/
+*.log
