--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -1,15 +1,31 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:14
-    container_name: erp-db                      # 컨테이너 이름 설정
+    container_name: erp-db
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}               # 초기 생성할 DB 이름 (env 파일에서 주입)
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"                             # 호스트:컨테이너 포트 매핑 (개발용 노출)
+      - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data  # DB 데이터를 호스트 볼륨에 영속 저장
+      - postgres-data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    ports:
+      - "8081:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      - db
 
 volumes:
-  postgres-data:                                # 위에서 지정한 볼륨 이름 선언
+  postgres-data:
+  pgadmin-data:
