--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -11,14 +11,15 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate  # 스키마를 자동 생성하지 않고, Entity와 DB 스키마 일치 여부만 검증
+      ddl-auto: none  # 스키마를 자동 생성하지 않고, Entity와 DB 스키마 일치 여부만 검증
     show-sql: false
 
   flyway:
     enabled: true
-    locations: classpath:db/migration/dev  # 개발용 마이그레이션 스크립트 경로
+    locations: classpath:db/migration
 
 logging:
   level:
     org.hibernate.SQL: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: INFO
+    org.flywaydb: DEBUG
