--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -11,14 +11,18 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update     # ?? ? ??? ?? ?? ??
-    show-sql: true         # ???? SQL ?? ??
+      ddl-auto: none
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
 logging:
   level:
-    org.hibernate.SQL: DEBUG    # Hibernate SQL ?? ?? ?? ??
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE  # ???? ? ??
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
