--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -11,15 +11,18 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none       # 운영환경: DDL 자동 생성/수정/검증 전부 금지
-    show-sql: false        # 운영환경에서는 SQL 출력 비활성화 (보안 및 성능 이슈 방지)
+      ddl-auto: none
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   flyway:
     enabled: true
+    baseline-on-migrate: false
     locations: classpath:db/migration
 
 logging:
   level:
     root: INFO
-    org.hibernate.SQL: WARN                                # Hibernate SQL 로그는 경고 이상만 출력
-    org.hibernate.type.descriptor.sql.BasicBinder: WARN    # 바인딩 값 출력도 경고 수준 제한
