--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -20,7 +20,8 @@ spring:
 
   flyway:
     enabled: true
-    locations: classpath:db/migration
+    baseline-on-migrate: false
+    locations: classpath:db/migration,classpath:db/seed
 
 logging:
   level:
