--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -25,4 +25,5 @@ spring:
 
 logging:
   level:
-    org.hibernate.orm.jdbc.bind: trace
+    org.hibernate.orm.jdbc.bind: TRACE
+    org.flywaydb.core: DEBUG
