✨ 서버 세션 시간 설정 60분

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -27,3 +27,8 @@ logging:
   level:
     org.hibernate.orm.jdbc.bind: TRACE
     org.flywaydb.core: DEBUG
+
+server:
+  servlet:
+    session:
+      timeout: 60m  # 60분
