--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -19,13 +19,13 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration,classpath:db/seed
 
-server:
-  servlet:
-    session:
-      timeout: 60m  # 60분
-
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS}
 
 user:
   default-password: ${USER_DEFAULT_PASSWORD}
+
+session:
+  timeout:
+    default-seconds: 3600      # 일반 로그인 (1시간)
+    auto-login-seconds: 604800 # 자동 로그인 (7일)
