--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,4 +1,7 @@
 spring:
+  jackson:
+    time-zone: Asia/Seoul
+
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${SPRING_DATASOURCE_URL}
@@ -12,6 +15,8 @@ spring:
     show-sql: true    # 실행되는 SQL을 콘솔에 출력
     properties:
       hibernate:
+        jdbc:
+          time_zone: UTC
         format_sql: true  # SQL 출력 포맷팅
 
   flyway:
