--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                 // JUnit 플랫폼 실행기
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'     // Swagger(OpenAPI) 문서 자동 생성 및 UI 지원
     implementation 'org.springframework.session:spring-session-jdbc'             // 스프링 세션 JDBC 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'       // 서버 헬스 체크
 }
 
 tasks.named('test') {
