--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -39,7 +39,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info
+        include: health
+
   endpoint:
     health:
       show-details: always
