--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -23,6 +23,12 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration,classpath:db/seed
 
+  data:
+    web:
+      pageable:
+        default-page-size: 20
+        max-page-size: 100
+
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS}
 
