--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,66 @@
 plugins {
-    id 'java'                                                  // Java 플러그인 적용
-    id 'org.springframework.boot' version '3.5.0'              // Spring Boot 플러그인 (v3.5.0)
-    id 'io.spring.dependency-management' version '1.1.7'       // 의존성 버전 관리 플러그인
+    id 'java'
+    id 'org.springframework.boot' version '3.5.0'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.lineinc'                                         // Maven group ID
-version = '0.0.1-SNAPSHOT'                                    // 버전 (개발 중 의미)
+group = 'com.lineinc'
+version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)           // Java 17 사용 명시 (JDK 자동 설정 가능)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
 configurations {
     compileOnly {
-        extendsFrom annotationProcessor                        // compileOnly에도 annotationProcessor 의존성을 포함
+        extendsFrom annotationProcessor
     }
 }
 
 repositories {
-    mavenCentral()                                             // Maven 중앙 저장소에서 의존성 가져오기
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'       // JPA (Hibernate 포함)
-    implementation 'org.springframework.boot:spring-boot-starter-security'       // Spring Security
-    implementation 'org.springframework.boot:spring-boot-starter-validation'     // Bean Validation (Jakarta)
-    implementation 'org.springframework.boot:spring-boot-starter-web'            // Spring MVC (Tomcat 포함)
-    compileOnly 'org.projectlombok:lombok'                                        // 컴파일 시에만 필요한 Lombok
-    annotationProcessor 'org.projectlombok:lombok'                                // Lombok 어노테이션 처리기
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor' // Spring Boot 설정 파일 자동 완성
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'              // 개발 중 핫리로드 지원
-    runtimeOnly 'org.postgresql:postgresql'                                      // PostgreSQL JDBC 드라이버
-    implementation 'org.flywaydb:flyway-core:9.22.0'                             // DB 마이그레이션 툴
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'       // JUnit + Mockito 등 포함
-    testImplementation 'org.springframework.security:spring-security-test'       // Spring Security 테스트 지원
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                 // JUnit 플랫폼 실행기
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'     // Swagger(OpenAPI) 문서 자동 생성 및 UI 지원
-    implementation 'org.springframework.session:spring-session-jdbc'             // 스프링 세션 JDBC 의존성 추가
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'       // 서버 헬스 체크
+    // Spring Boot Starters
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // Database
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.flywaydb:flyway-core:9.22.0'
+    implementation 'org.springframework.session:spring-session-jdbc'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Configuration Processor
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    // Devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // Swagger / OpenAPI
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
+
+    // QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+
+    // Test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-    useJUnitPlatform()                                                           // JUnit 5 사용 설정
+    useJUnitPlatform()
 }
-
