--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -15,7 +15,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none  # Hibernate가 테이블을 자동으로 생성/수정하지 않음 (Flyway가 스키마 관리함)
+      ddl-auto: update
     show-sql: true    # 실행되는 SQL을 콘솔에 출력
     properties:
       hibernate:
@@ -23,11 +23,6 @@ spring:
           time_zone: UTC
         format_sql: true  # SQL 출력 포맷팅
         default_batch_fetch_size: 200
-
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration,classpath:db/seed
 
 user:
   default-password: ${USER_DEFAULT_PASSWORD}
