--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,12 @@
 spring:
+  data:
+    web:
+      pageable:
+        max-page-size: 200
+
+  jackson:
+    time-zone: Asia/Seoul
+
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${SPRING_DATASOURCE_URL}
@@ -6,20 +14,30 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
-    open-in-view: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        jdbc.time_zone: UTC
         format_sql: true
+        default_batch_fetch_size: 200
+    open-in-view: false
 
-  flyway:
-    enabled: true
-    baseline-on-migrate: false
-    locations: classpath:db/migration
+user:
+  default-password: ${USER_DEFAULT_PASSWORD}
 
-logging:
-  level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+session:
+  timeout:
+    default-seconds: ${SESSION_TIMEOUT_DEFAULT_SECONDS}
+    auto-login-seconds: ${SESSION_TIMEOUT_AUTO_LOGIN_SECONDS}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+
+  endpoint:
+    health:
+      show-details: always
