--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -22,6 +22,7 @@ spring:
         jdbc.time_zone: UTC     # DB와 시간대 동기화를 위해 UTC 사용 권장
         format_sql: true        # SQL 출력 포맷팅 적용 (가독성 향상)
         default_batch_fetch_size: 200  # batch fetch 사이즈 설정으로 N+1 문제 완화
+    open-in-view: false
 
 user:
   default-password: ${USER_DEFAULT_PASSWORD}
