✨ 배포후 미사용 image 제거

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,5 @@ jobs:
             git reset --hard origin/dev
             chmod +x ./run.sh
             ./run.sh dev
+            docker image prune -f
           EOF
