--- a/build.gradle
+++ b/build.gradle
@@ -84,3 +84,9 @@ tasks.withType(JavaCompile).configureEach {
     // 이렇게 지정함으로써 컴파일러가 자동 생성 코드를 인식할 수 있게 됩니다.
     options.generatedSourceOutputDirectory.set(file("build/generated/querydsl"))
 }
+
+// plain JAR (일반 JAR) 생성을 비활성화하여,
+// Spring Boot 실행용 fat JAR (bootJar)만 생성되도록 설정
+tasks.named('jar') {
+    enabled = false
+}
