--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -15,7 +15,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update  # 엔티티 변경 시 자동으로 DB 스키마 업데이트
+      ddl-auto: create  # 엔티티 변경 시 자동으로 DB 스키마 업데이트
     show-sql: true       # 실행되는 SQL을 콘솔에 출력
     properties:
       hibernate:
