✨ Cookie 보안 및 same-site 설정

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -39,3 +39,10 @@ management:
 
 swagger:
   server-url: https://dev-erp-api.dooson.it
+
+server:
+  servlet:
+    session:
+      cookie:
+        same-site: none
+        secure: false
