--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -39,3 +39,10 @@ management:
 
 swagger:
   server-url: http://localhost:8080
+
+server:
+  servlet:
+    session:
+      cookie:
+        same-site: none
+        secure: false
