--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -45,4 +45,4 @@ server:
     session:
       cookie:
         same-site: none
-        secure: true
+        secure: false  # HTTPS 아닌 환경에서도 쿠키 저장 가능
