--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,15 @@
 spring:
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
+    cookie:
+      name: SESSION
+      path: /
+      same-site: none
+      secure: false
+      http-only: true
+
   data:
     web:
       pageable:
@@ -39,4 +50,4 @@ management:
 
 swagger:
   server-url: https://dev-erp-api.dooson.it
-  ㄴ
+
