--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,8 +7,9 @@ spring:
       name: SESSION
       path: /
       same-site: none
-      secure: false
+      secure: true
       http-only: true
+      max-age: 604800 # 기본 7일, 필요에 따라 조정
 
   data:
     web:
