--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,6 +3,9 @@ spring:
     store-type: jdbc
     jdbc:
       initialize-schema: always
+    cookie:
+      same-site: none
+      secure: true
 
   data:
     web:
