--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,7 +20,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update # 엔티티 변경 사항을 기존 테이블에 반영 (테이블 삭제 안 함)
     show-sql: true
     properties:
       hibernate:
