--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -20,7 +20,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update   # 엔티티 변경 사항을 기존 테이블에 반영 (테이블 삭제 안 함)
+      ddl-auto: create   # 엔티티 변경 사항을 기존 테이블에 반영 (테이블 삭제 안 함)
     show-sql: true       # 실행되는 SQL을 콘솔에 출력
     properties:
       hibernate:
