✨ 비밀번호 초기화시 이메일 발송 로직 추가

--- a/build.gradle
+++ b/build.gradle
@@ -54,11 +54,8 @@ dependencies {
     // Apache POI for Excel export
     implementation 'org.apache.poi:poi-ooxml:5.2.5' // Excel 파일 처리
 
-    // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 지원
-    testImplementation 'org.springframework.security:spring-security-test' // Security 테스트 지원
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // JUnit 런처
-
+    // Spring Boot Mail Starter
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
