--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -56,3 +56,14 @@ swagger:
 
 cors:
   allowed-origins: https://dev-erp.dooson.it,https://dev-erp-api.dooson.it,http://localhost:3000
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: ${AWS_S3_BUCKET}
+      cdn-url: ${AWS_CDN_URL}
