--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -71,3 +71,6 @@ cloud:
     s3:
       bucket: ${AWS_S3_BUCKET}
       cdn-url: ${AWS_CDN_URL}
+
+user:
+  default-password: ${USER_DEFAULT_PASSWORD}
