--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,6 @@ jobs:
       - name: 🚀 EC2에서 JAR 실행
         run: |
           ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} << EOF
-            sudo systemctl daemon-reexec
+            sudo systemctl daemon-reload
             sudo systemctl restart myapp.service
           EOF
