--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
     // 사용자별 또는 IP 기반 요청 제한을 위한 Bucket4j 라이브러리
     implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.3.0'
+
+    // Javers for auditing
+    implementation 'org.javers:javers-spring-boot-starter-sql:7.4.0'
 }
 
 tasks.named('test') {
